# python-datamodel

./: .flake8  .gitignore  .readthedocs.yml  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  INSTALL.md  LICENSE  MANIFEST.in  Makefile  README.md  pyproject.toml  script.calltree  script.profile  setup.cfg  setup.py
.github/workflows/: publish_to_pypi.yml  release.yml
datamodel/: Cargo.toml  __init__.py  abstract.py  base.py  converters.c  converters.html  converters.pyx  encoders.py  exceptions.c  exceptions.pxd  exceptions.py  exceptions.pyx  fields.c  fields.html  fields.pyx  functions.html  functions.pxd  functions.pyx  model.py  models.py  profiler.py  types.c  types.py  types.pyx  validation.c  validation.cpp  validation.html  validation.pxd  validation.pyx  version.py
datamodel/adaptive/: models.py
datamodel/aliases/: __init__.py
datamodel/jsonld/: __init__.py  models.py
datamodel/libs/: __init__.py  mapping.pxd  mapping.pyx  mutables.py
datamodel/parsers/: __init__.py  encoder.py  encoders.py  json.cpp  json.html  json.pyx
datamodel/rs_core/: Cargo.toml
datamodel/rs_core/src/: lib.rs
datamodel/rs_parsers/: Cargo.toml
datamodel/rs_parsers/src/: lib.rs
datamodel/rs_validators/: Cargo.toml
datamodel/rst_converters/: Cargo.toml
datamodel/rst_converters/src/: lib.rs
datamodel/typedefs/: __init__.py  singleton.pxd  singleton.pyx  types.pxd  types.pyx
datamodels/: version.py
docs/: api.rst  conf.py  index.md  index.rst  requirements-dev.txt  requirements.txt
examples/: basic.py  check.py  checks.py  containers.py  dashboard.py  dict_model.py  dynamic.py  employee.py  environment.py  example.py  form_schema.py  inherit.py  json_ld.py  json_schema.py  lead_model.py  meta.py  model.py  mutables.py  payroll.py  person.py  polymorph.py  primer.py  profile_model.py  schema.py  test_actor.py  test_adaptive.py  test_adaptive_export.py  test_adaptive_form.py  test_alias.py  test_aliases.py  test_assignment.py  test_basic_validations.py  test_callables.py  test_classdict.py  test_client.py  test_containers.py  test_converters.py  test_datadriver.py  test_descriptor.py  test_driver.py  (+29 more)
examples/nn/: examples.py  stores.py
examples/tests/: sp_strings.py  sp_types.py  speed_dates.py
locale/de_DE/LC_MESSAGES/: nav.po
locale/en_US/LC_MESSAGES/: nav.po
locale/es_ES/LC_MESSAGES/: nav.po
locale/fr_FR/LC_MESSAGES/: nav.po
locale/it_IT/LC_MESSAGES/: nav.po
tests/: test_aliases.py  test_classdict.py  test_container.py  test_converter.py  test_dashboards.py  test_data.py  test_descriptors.py  test_dict.py  test_field.py  test_generic.py  test_inherit.py  test_json.py  test_method.py  test_model.py  test_notify.py  test_primitives.py  test_qsdriver.py  test_qsmodel.py  test_qsobject.py  test_ticket.py  test_tickets.py  test_tuples.py  test_type_user.py  test_types.py  test_unions.py  test_valid_callables.py  test_validations.py
