[build-system]
requires = [
    'setuptools>=47',
    'wheel==0.37.1',
    'Cython==0.29.32',
    'toml>=0.10.2',
    'asyncio==3.4.3',
    'flit'
]
build-backend = "setuptools.build_meta"

[tool.flit.metadata]
module = "datamodels"
author = "Jesus Lara Gimenez"
author-email = "jesuslarag@gmail.com"
home-page = "https://github.com/phenobarbital/python-datamodel"
classifiers=[
  "Development Status :: 4 - Beta",
  "Intended Audience :: Developers",
  "Intended Audience :: System Administrators",
  "Intended Audience :: Information Technology",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python",
  "Typing :: Typed",
  "Environment :: Web Environment",
  "Framework :: AsyncIO",
  "Topic :: Software Development :: Libraries :: Application Frameworks",
  "Topic :: Software Development :: Libraries :: Python Modules",
  "Topic :: Software Development :: Build Tools",
  "License :: OSI Approved :: BSD License",
]
dynamic = ['version', 'description']
description-file = "README.md"
requires-python = ">=3.8.1"

[tool.pytest.ini_options]
addopts = [
  "--strict-config",
  "--strict-markers",
]
log_cli = true
log_cli_level = "DEBUG"
log_cli_format = "%(asctime)s [%(levelname)8s] %(message)s (%(filename)s:%(lineno)s)"
log_cli_date_format = "%Y-%m-%d %H:%M:%S"
filterwarnings = [
    "error",
    'ignore:The loop argument is deprecated since Python 3\.8, and scheduled for removal in Python 3\.10:DeprecationWarning:asyncio',
]

[tool.black]
line-length = 88
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''
