[build-system]
requires = [
    'setuptools==74.0.0',
    'Cython==3.0.11',
    'wheel==0.44.0',
    "setuptools-rust==1.10.2",
    'maturin>=1,<2',
    'typing-extensions >=4.6.0,!=4.7.0'
]
build-backend = "setuptools.build_meta"

[tool.flit.metadata]
module = "python-datamodel"
author = "Jesus Lara Gimenez"
author-email = "jesuslarag@gmail.com"
home-page = "https://github.com/phenobarbital/python-datamodel"
classifiers=[
  "Development Status :: 4 - Beta",
  "Intended Audience :: Developers",
  "Intended Audience :: System Administrators",
  "Intended Audience :: Information Technology",
  "Operating System :: OS Independent",
  "Operating System :: POSIX :: Linux",
  "Operating System :: Microsoft :: Windows",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python",
  "Programming Language :: Rust",
  "Typing :: Typed",
  "Environment :: Web Environment",
  "Framework :: AsyncIO",
  "Topic :: Software Development :: Libraries :: Application Frameworks",
  "Topic :: Software Development :: Libraries :: Python Modules",
  "Topic :: Software Development :: Build Tools",
  "License :: OSI Approved :: BSD License",
]
dynamic = ['version', 'description', 'license', 'keywords', 'readme']
description-file = "README.md"
requires-python = ">=3.10.0"

[tool.pytest.ini_options]
addopts = [
  "--strict-config",
  "--strict-markers",
]
log_cli = true
log_cli_level = "DEBUG"
log_cli_format = "%(asctime)s [%(levelname)8s] %(message)s (%(filename)s:%(lineno)s)"
log_cli_date_format = "%Y-%m-%d %H:%M:%S"
filterwarnings = [
    "error",
    'ignore:The loop argument is deprecated since Python 3\.8, and scheduled for removal in Python 3\.10:DeprecationWarning:asyncio',
]

[tool.black]
line-length = 120
target-version = [ 'py310', 'py311', 'py312', 'py313' ]
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''

[tool.mypy]
pretty = true
ignore_missing_imports = true

[tool.flake8]
ignore = 'E501,W503,E203'

[tool.maturin]
python-source = "datamodel/rs_parsers"
module-name = "datamodel.rs_parsers"
bindings = "pyo3"
features = ["pyo3/extension-module"]

[tool.cibuildwheel]
build = "cp3{10,11,12,13}-*"
skip = "pypy*"
